--- a/AUTHORS
+++ b/AUTHORS
@@ -12,7 +12,7 @@
 Артём Малыгин <malygin.wm@gmail.com>
 Алёна Чегодайкина <bss_lps@mail.ru>
 Тимур Касимов <timurcat7@gmail.com>
-Слава Ермолаева
+Слава Ермолаева <Yasya_E@mail.ru>
 Альбина Плотникова <tema.kot.18@mail.ru>
 Мария Зуенок
 Анастасия Пономарёва <nasstiii@list.ru>
